--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -379,10 +379,10 @@ sources:
     osm:
         # EraserMaps the app only supports MVT format tiles
         type:  MVT #TopoJSONTiles topojson
-        url:  http://vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
+        #url:  http://vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
         #enforce_winding: true  #because Tangram v0.4 and tiles v0.5-pre don't play nice
-        #url:  //localhost:8080//osm/all/{z}/{x}/{y}.mvt
-        #url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-HqUVidw
+        #url:  //localhost:8080/osm/all/{z}/{x}/{y}.mvt
+        url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-HqUVidw
         max_zoom: 16
 
 
@@ -1137,8 +1137,9 @@ layers:
             early:
                 filter: { $zoom: { max: 15 } }
                 draw:
-                    outline:
-                        order: 353
+                    lines:
+                        outline:
+                            order: 353
             link:
                 filter: { is_link: yes } # on- and off-ramps, etc
                 draw:
@@ -1155,8 +1156,6 @@ layers:
                     draw:
                         lines:
                             order: 352
-                        outline:
-                            visible: false
                 tunnel-link:
                     filter: {is_tunnel: yes, $zoom: {min: 13} }
                     draw:
