--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -379,10 +379,10 @@ sources:
     osm:
         # EraserMaps the app only supports MVT format tiles
         type:  MVT #TopoJSONTiles topojson
-        url:  http://vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
+        #url:  http://vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
         #enforce_winding: true  #because Tangram v0.4 and tiles v0.5-pre don't play nice
         #url:  //localhost:8080/osm/all/{z}/{x}/{y}.mvt
-        #url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-HqUVidw
+        url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-HqUVidw
         # road labels in Tangram JS are broken when overzooming, set max_zoom: 18 to preview fix
         max_zoom: 16
 
