--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -2638,8 +2638,7 @@ layers:
                 filter: { maritime_boundary: yes }
                 draw:
                     lines:
-                        order: function() { return (feature.sort_key - 2); }
-                        color: blue
+                        visible: false
         region:
             filter:
                 any:
