added taqueria icon

--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -239,7 +239,7 @@ textures:
             baseball-field: [506, 84, 38, 38]
             basketball-court: [460, 84, 38, 38]
             beach: [644, 84, 38, 38]
-            beer-garden: [276, 210, 38, 38]
+            beer-garden: [322, 210, 38, 38]
             bench: [548, 0, 38, 38]
             bicycle-parking: [644, 126, 38, 38]
             bike-shop: [872, 126, 38, 38]
@@ -249,16 +249,17 @@ textures:
             bridge: [920, 84, 38, 38]
             buddhism: [782, 84, 38, 38]
             building: [414, 168, 34, 34]
-            burger: [138, 210, 38, 38]
+            burger: [184, 210, 38, 38]
+            taqueria: [138, 210, 38, 38]
             bus-station: [778, 0, 38, 38]
             butcher: [920, 42, 38, 38]
             campground: [828, 84, 38, 38]
             candy-store: [0, 210, 38, 38]
-            capital-l: [514, 210, 16, 16]
-            capital-m: [494, 210, 12, 12]
-            capital-s: [474, 210, 10, 10]
-            capital-xl: [538, 210, 20, 20]
-            capital-xs: [460, 210, 8, 8]
+            capital-l: [560, 210, 16, 16]
+            capital-m: [540, 210, 12, 12]
+            capital-s: [520, 210, 10, 10]
+            capital-xl: [584, 210, 20, 20]
+            capital-xs: [506, 210, 8, 8]
             car-dealership: [780, 126, 38, 38]
             castle: [414, 42, 38, 38]
             cemetery: [736, 84, 38, 38]
@@ -268,9 +269,9 @@ textures:
             college-university: [870, 168, 38, 38]
             convenience-store: [46, 84, 38, 38]
             courthouse: [364, 0, 38, 38]
-            current-location: [80, 342, 88, 88]
+            current-location: [158, 342, 88, 88]
             department-store: [734, 126, 38, 38]
-            drinking-water: [230, 210, 38, 38]
+            drinking-water: [276, 210, 38, 38]
             dry-cleaning: [0, 84, 38, 38]
             electronics-store: [598, 126, 38, 38]
             factory: [368, 168, 38, 38]
@@ -281,7 +282,7 @@ textures:
             fountain: [322, 126, 38, 38]
             garden: [690, 84, 38, 38]
             gas-station: [960, 168, 38, 38]
-            generic: [414, 210, 38, 38]
+            generic: [460, 210, 38, 38]
             gift-shop: [138, 126, 38, 38]
             golf-course: [414, 84, 38, 38]
             government-building: [138, 168, 38, 38]
@@ -291,8 +292,8 @@ textures:
             historic-site: [92, 126, 38, 38]
             hospital: [184, 0, 34, 34]
             hotel: [732, 0, 38, 38]
-            ice-cream-shop: [322, 210, 38, 38]
-            information: [368, 210, 38, 38]
+            ice-cream-shop: [368, 210, 38, 38]
+            information: [414, 210, 38, 38]
             jewelry-store: [736, 42, 38, 38]
             landmark: [272, 0, 38, 38]
             laundry: [690, 42, 38, 38]
@@ -300,8 +301,8 @@ textures:
             light-rail: [686, 0, 38, 38]
             lighthouse: [276, 84, 38, 38]
             liquor-store: [506, 126, 38, 38]
-            locate-off: [414, 342, 72, 72]
-            locate-on: [334, 342, 72, 72]
+            locate-off: [492, 342, 72, 72]
+            locate-on: [412, 342, 72, 72]
             mall: [644, 42, 38, 38]
             market: [598, 42, 38, 38]
             mine: [782, 42, 40, 38]
@@ -329,14 +330,14 @@ textures:
             recycling-facility: [92, 42, 38, 38]
             rental-car: [594, 0, 38, 38]
             restaurant: [92, 210, 38, 38]
-            route-arrow: [776, 210, 128, 128]
-            route-start: [0, 342, 72, 92]
-            route-stop: [912, 210, 72, 92]
+            route-arrow: [822, 210, 128, 128]
+            route-start: [78, 342, 72, 92]
+            route-stop: [0, 342, 72, 92]
             ruin: [502, 0, 38, 38]
             salon-barber: [46, 42, 38, 38]
             school: [552, 84, 38, 38]
-            search-active: [174, 342, 72, 108]
-            search-inactive: [254, 342, 72, 108]
+            search-active: [252, 342, 72, 108]
+            search-inactive: [332, 342, 72, 108]
             shoe-store: [552, 42, 38, 38]
             ski-area: [368, 126, 38, 38]
             soccer-field: [368, 84, 38, 38]
@@ -350,16 +351,16 @@ textures:
             tennis: [414, 126, 38, 38]
             theme-park: [0, 126, 38, 38]
             toilets: [874, 84, 38, 38]
-            townspot-l: [724, 210, 16, 16]
-            townspot-l-rev: [618, 210, 16, 16]
-            townspot-m: [704, 210, 12, 12]
-            townspot-m-rev: [598, 210, 12, 12]
-            townspot-s: [686, 210, 10, 10]
-            townspot-s-rev: [580, 210, 10, 10]
-            townspot-xl: [748, 210, 20, 20]
-            townspot-xl-rev: [642, 210, 20, 20]
-            townspot-xs: [670, 210, 8, 8]
-            townspot-xs-rev: [566, 210, 6, 6]
+            townspot-l: [770, 210, 16, 16]
+            townspot-l-rev: [664, 210, 16, 16]
+            townspot-m: [750, 210, 12, 12]
+            townspot-m-rev: [644, 210, 12, 12]
+            townspot-s: [732, 210, 10, 10]
+            townspot-s-rev: [626, 210, 10, 10]
+            townspot-xl: [794, 210, 20, 20]
+            townspot-xl-rev: [688, 210, 20, 20]
+            townspot-xs: [716, 210, 8, 8]
+            townspot-xs-rev: [612, 210, 6, 6]
             toy-game-store: [916, 0, 38, 38]
             traffic-signal: [916, 168, 36, 34]
             train-station: [410, 0, 38, 38]
@@ -367,7 +368,7 @@ textures:
             view-point: [686, 168, 40, 38]
             vineyard: [46, 168, 40, 38]
             volcano: [92, 84, 38, 38]
-            wine-bar: [184, 210, 38, 38]
+            wine-bar: [230, 210, 38, 38]
             winery: [456, 168, 38, 38]
             zoo: [966, 84, 38, 38]
 
@@ -5208,6 +5209,9 @@ layers:
                 burger:
                     filter: { kind: [fast_food, burger] }
                     draw:   { icons: { sprite: burger } }
+                taqueria:
+                    filter: { kind: [burrito,taqueria] }
+                    draw:   { icons: { sprite: taqueria } }
                 bus-station:
                     filter: { kind: [bus_stop, bus_station] }
                     draw:   { icons: { sprite: bus-station } }
