--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -760,6 +760,11 @@ styles:
     text-blend-order:
         base: text
         blend_order: 1
+    ux-dash-line-overlay:
+        base: lines
+        blend: overlay
+        blend_order: 0
+        dash: [2, 1]
     ux-route-line-overlay:
         base: lines
         blend: overlay
@@ -808,6 +813,13 @@ layers:
                 color: '#06a6d4'
                 order: 500
                 width: [[0,3.5px],[5,5px],[9,7px],[10,6px],[11,6px],[13,8px],[14,9px],[15,10px],[16,11px],[17,12px],[18,10px]]
+    mz_dash_line:
+        data: { source: mz_dash_line }
+        draw:
+            ux-dash-line-overlay:
+                color: '#06a6d4'
+                order: 500
+                width: 3px
     mz_route_line_transit:
         data: { source: mz_route_line_transit }
         draw:
